note for python
1. basic data type
2. for, if

--- a/_posts/2018-09-03-Python 基础数据类型.markdown
+++ b/_posts/2018-09-03-Python 基础数据类型.markdown
@@ -12,7 +12,30 @@ tags:
 
 # Python 基础数据类型
 
-### 整型（int）
+
+### 数字
+
+
+### 不同进制的表示
+
+1. 0b 二进制
+2. 0o 八进制
+3. 0x 十六进制
+
+#### 不同进制的相互转换
+
+括号内没有特殊标注，默认为十进制
+
+```
+1. bin(10) 转二进制 
+2. int(10) 转十进制
+3. hex(10) 转十六进制
+4. oct(10) 转八进制
+5. int(0b101)
+```
+
+
+#### 整型（int）
 
 定义一个整型的变量
 
@@ -41,7 +64,7 @@ tags:
 <class 'float'>
 ```
 
-### 浮点型（float）
+#### 浮点型（float）
 
 浮点型的数据范围
 
@@ -55,10 +78,28 @@ tags:
 
 浮点数的尾数问题
 
+#### 布尔型(bool)
+
+1. bool(0) False
+2. bool(1) True
+3. bool('abc') True
+4. bool(' ') False，除了0，空值也可以表示False
+5. bool([1,2,3]) True
+6. bool(None) False
+7. 布尔量属于数字
+
 ### 序列
 
 1. 特点是有序，可以使用索引 
 2. 包含字符串，列表，元组三个子类型
+
+序列类型的共有操作
+
+```
+1. 索引：序列[1]
+2. 切片：序列［0:3]，序列[-1: ]，"Hello world"[0:8:2] 
+3. 判断元素是否在列表中：3 in [1,2,3]
+```
 
 #### 字符串（str）
 
@@ -97,7 +138,7 @@ tags:
 'is is strin'
 ```
 
-字符串的加法和乘法运算
+字符串的运算
 
 ```
 >>> a = 'this is string'
@@ -120,8 +161,6 @@ tags:
 
 列表的切片
 
-与字符串类似
-
 ```
 >>> a =['苹果', '西瓜','桃子','火龙果','榴莲']
 >>> a[0]
@@ -138,7 +177,7 @@ tags:
 ['榴莲', '火龙果', '桃子', '西瓜', '苹果']
 ```
 
-列表的加法和乘法
+列表的运算
 
 ```
 >>> a + a
@@ -154,12 +193,19 @@ tags:
 >>> a[0] = '橘子'
 >>> a
 ['橘子', '西瓜', '桃子', '火龙果', '榴莲']
+
 >>> a[0:2] = '水果','食物'
 >>> a
 ['水果', '食物', '桃子', '火龙果', '榴莲']
+
 >>> a[0:2] = ['茄子','黄瓜']
 >>> a
 ['茄子', '黄瓜', '桃子', '火龙果', '榴莲']
+
+>>> b = [1,2,3]
+>>> b.append(4)
+>>> print(b)
+[1, 2, 3, 4]
 ```
 
 列表的嵌套
@@ -205,9 +251,9 @@ print(a[2][0])
 
 元组中元素的修改
 
-元组中的数字、字符等不可修改
-元组中列表里的元素可以修改
-实质不能修改元组元素所指向的id
+1. 元组中的数字、字符等不可修改
+2. 元组中列表里的元素可以修改
+3. 实质不能修改元组元素所指向的id
 
 ```
 a = (1,'string',['a1','a2','a3'])
@@ -220,10 +266,25 @@ print(id(a[2]))
 print(id(a[2][0]))
 ```
 
+元组间的运算
+
+```
+(1,2,True)
+(1,2,3)+(1,2,True)
+(1,2,True)*2
+```
+
+
 
 ### 集合 
 
 #### 集合（set）
+
+集合的特点
+
+1. 无序
+2. 没有索引
+3. 不能切片
 
 定义一个空的集合
 
@@ -239,9 +300,12 @@ a = {1,}
 print(type(a))
 ```
 
-集合的运算
+集合的操作
 
 ```
+len({1,2,3})
+1 in {1,2,3}
+1 not in {1,2,3}
 a = {'a','b'}
 b = {'b','c'}
 print(a & b)
@@ -250,9 +314,7 @@ print(a|b)
 print(a - b)
 ```
 
-集合的特点
-1. 不能使用索引和切片
-2. 集合里的元素不重复
+
 
 
 
@@ -285,4 +347,53 @@ print(a.values())
 字典的特点
 
 1. key 不能重复
-2. 不能索引和切片
+2. Key 必须是不可变的类型，比如 int，str，元组，不能为列表
+3. 不能索引和切片
+
+
+
+### 常用操作
+
+查看数据类型
+
+```
+type(1)
+type(1.0)
+type('1')
+type(('hello'))
+type((1))
+```
+
+获取集合或序列元素的个数
+
+```
+len(set())
+```
+
+变量间数值的传递
+
+```
+a = 1
+b = a
+a = 3
+print(b)
+```
+
+```
+a = [1,2,3,4]
+id(a)
+b = a
+a[0] = '1'
+print(b)
+```
+
+数据类型的可变/不可变
+
+1. int str tuple 值类型，不可变
+2. list set dict 引用类型，可变 
+
+查看内存地址
+
+```
+id(变量)
+```
