--- a/_posts/2018-09-04-Python 基本语句.markdown
+++ b/_posts/2018-09-04-Python 基本语句.markdown
@@ -12,6 +12,13 @@ tags:
 
 # Python 基本语句
 
+### 空语句
+
+```
+if True
+	pass
+```
+
 ### 分支
 
 #### 单分支
@@ -65,6 +72,8 @@ i = 1
 while i < 10:
     print(i)
     i += 1
+else:
+	print("EOF")
 ```
 
 
