--- a/_posts/2018-09-03-Python 基础数据类型.markdown
+++ b/_posts/2018-09-03-Python 基础数据类型.markdown
@@ -101,6 +101,27 @@ tags:
 3. 判断元素是否在列表中：3 in [1,2,3]
 ```
 
+判断序列的长度
+
+```
+len('hello')
+```
+
+输出序列中的元素
+
+```
+a = [1,2,3,4,5,6,7,8]
+for i in range(0, len(a),2):
+    print(a[i], end = '|')
+
+# 通过切片的方法输出    
+a = [1,2,3,4,5,6,7,8]
+b = a[0:len(a):2]
+print(b)
+```
+
+
+
 #### 字符串（str）
 
 定义一个字符串
@@ -218,6 +239,13 @@ tags:
 '梨子'
 >>> a[0][0][0]
 '梨' 
+```
+
+获取最大值和最小值
+
+```
+max([1,2,3])
+min([1,2,3])
 ```
 
 #### 元组（tuple）
@@ -397,3 +425,25 @@ print(b)
 ```
 id(变量)
 ```
+
+输出链接地址
+
+
+```
+print(r'c:\north\west')
+```
+
+r 或R表示原始字符串
+
+转义字符
+
+```
+'let\'s go' 
+```
+
+返回 ASCII 编码的序号
+
+```
+ord('d')
+```
+
