--- a/_posts/2018-09-03-Python 基础数据类型.markdown
+++ b/_posts/2018-09-03-Python 基础数据类型.markdown
@@ -3,7 +3,7 @@ layout:     post
 title:      "Python 基础数据类型"
 subtitle:   ""
 date:       2018-09-03
-author:     "YanSir"
+author:     "YanSir Park"
 header-img: "img/post-bg-js-version.jpg"
 tags:
     - Python
