--- a/_posts/2018-09-03-Python 基础数据类型.markdown
+++ b/_posts/2018-09-03-Python 基础数据类型.markdown
@@ -76,7 +76,13 @@ tags:
 <class 'float'>
 ```
 
-浮点数的尾数问题
+浮点数的不确定尾数问题
+
+```
+a = 0.1 + 0.3 + 1.3
+print(a)
+```
+
 
 #### 布尔型(bool)
 
@@ -120,6 +126,22 @@ b = a[0:len(a):2]
 print(b)
 ```
 
+序列操作符
+
+1. x in s
+2. x not in s
+3. s + t
+4. s * n
+5. s[i]
+6. s[i:j] or s[i:j:k]
+
+5个函数和方法
+
+1. len(s)
+2. min(s)
+3. max(s)
+4. s.index(x),s.index(x,i,j)
+5. s.count(x)
 
 
 #### 字符串（str）
@@ -168,6 +190,83 @@ print(b)
 >>> a*2
 'this is stringthis is string'
 ```
+
+字符串的处理方法
+
+```
+a = "A,B,C".split(",")
+b = "anJHnjnJkJWQ".lower()
+c = "anJHnjnJkJWQ".upper()
+d = "a apple day".count('a')
+e = "python".replace('n', 'python.com')
+f = "python".center(20, '=')
+g = "= python =".strip(" =np")
+h = '-'.join("Python")
+print(a)
+print(b)
+print(c)
+print(d)
+print(e)
+print(f)
+print(g)
+print(h)
+```
+
+字符串的处理函数
+
+```
+str(x) 转换为字符串形式
+len(x) 返回字符串的长度
+hex(x) 十六进制
+oct(x) 八进制
+chr(u) 由 Unicode 转换为单字符
+ord(x) 由字符转换为 Unicode 编码 
+```
+
+
+字符串类型的格式化
+
+槽机制
+
+```
+a = "{}: 计算机的输出功率位{}W".format('新华社', 10)
+print(a)
+```
+
+槽的顺序
+
+```
+a = "{1}: 计算机的输出功率位{0}W".format('新华社', 10)
+print(a)
+```
+
+format的格式化输出
+
+1. 槽内部格式化的配置方式{<参数序号>:<格式控制标记>}
+2. 完整格式{参数序号:<用于填充的字符><对齐><宽度><数字的千位分隔符,><.精度><类型，整数:b,c,d,o,x,X 浮点数: e,E,f,%>}
+
+```
+a = "{0:=^20}".format("Python")
+b = "{0:*>20}".format("Python")
+c = "{:10}".format("BIT")
+print(a)
+print(b)
+print(c)
+```
+
+
+```
+a = "{0:.2f}".format(12345.678)
+b = "{0:,.2f}".format(12345.678)
+c = "{0:b},{0:c},{0:d},{0:o},{0:x},{0:X}".format(425)
+d = "{0:e},{0:E},{0:f},{0:%}".format(3.14)
+print(a)
+print(b)
+print(c)
+print(d)
+```
+
+
 
 
 #### 列表（list）
@@ -247,6 +346,44 @@ print(b)
 max([1,2,3])
 min([1,2,3])
 ```
+
+列表的函数和方法
+
+1. ls[i] = x
+2. ls[i,j,k] = lt
+3. del ls[i]
+4. del ls[i:j:k]
+5. ls += lt
+6. ls *= n
+7. ls.append(x)
+8. ls.clear()
+9. ls.copy()
+10. ls.insert(i,x)
+11. ls.pop(i)
+12. ls.remove(x)
+13. ls.reverse()
+
+例子
+
+```
+ls = ['cat', 'dog', 'tiger', 1024]
+ls[1:2] = [1,2,3,4]
+print(ls)
+del ls[::3]
+print(ls)
+print(ls*2)
+```
+
+```
+ls = ['cat', 'dog', 'tiger', 1024]
+ls.append(1234)
+print(ls)
+ls.insert(3, 'human')
+print(ls)
+ls.reverse()
+print(ls)
+```
+
 
 #### 元组（tuple）
 
@@ -342,11 +479,96 @@ print(a|b)
 print(a - b)
 ```
 
+集合操作符
+
+1. S|T: 并集，返回一个新集合，包括在S和T中所有元素
+2. S-T: 差集，返回一个新集合，包括在集合S但不在T中的元素
+3. S&T: 交集，返回一个新集合，包括同时在S和T中存在的元素
+4. S^T: 补集，返回一个新集合，包括集合S和T中的非相同的元素
+5. S<= T 或S < T: 返回True/False, 判断S和T的子集关系
+6. S>= T 或 S>T: 返回Trune/False, 判断S和T的包含关系
+
+集合的处理方法
+
+1. S.add(x): 如果x 不在集合S中，将x增加到S
+2. S.discard(x): 移除S中元素x, 如果不在，不会报错
+3. S.remove(x): 移除S中元素x, 如果x不在集合S中，产生KeyError错误
+4. S.clear(): 移除S中所有元素
+5. S.pop: 随机返回S的一个元素，更新S,若S为空产生KeyError异常
+6. S.copy: 返回集合S的一个副本
+7. len(S): 返回集合S的元素个数
+8. x in S: 判断S中元素x, x在集合S中，返回True, 否则返回False
+9. x not in S: 参考上一条
+10. set(x): 将其他类型的x 转变为集合类型
+
+集合的应用场景
+
+包含关系的比较
+```
+A = 'p' in {'p', 'y', '123'}
+B = {'p', 'y'} >= {'p', 'y', '123'}
+print(A)
+print(B)
+```
+
+数据去重(最重要的特点)
+
+```
+ls = ['p', 'p', 'y', 'y', 123]
+s = set(ls)
+print(s)
+lt = list(s)
+print(lt)
+
+```
+
+集合的运算
+
+```
+A = {'p', 'y', 123}
+B = set('pypy123')
+print(A-B)
+print(B-A)
+print(A&B)
+print(A|B)
+print(A^B)
+```
+
+集合元素的遍历
+
+```
+A = {'p', 'y', 123}
+print('`````````')
+for item in A:
+    print(item, end = ",")
+print("\n")
+print('`````````')
+```
+
+```
+A = {'p', 'y', 123}
+print("~~~~~~~~~")
+try:
+    while True:
+        print(A.pop(), end = " ")
+except:
+    pass
+print('\n')
+print("~~~~~~~~~")
+print(A)
+```
 
 
 
 
 #### 字典类型 （dict）
+
+1. 数学中的映射
+2. 索引和数据
+3. 映射类型由用户定义
+4. 键值对之间无序
+5. 采用大括号{}和dict()进行定义
+6. {<键1>:<值1>,<键2>:<值2>,<键3>:<值3>}
 
 定义一个空的字典
 
@@ -377,6 +599,27 @@ print(a.values())
 1. key 不能重复
 2. Key 必须是不可变的类型，比如 int，str，元组，不能为列表
 3. 不能索引和切片
+
+字典类型操作函数和方法
+
+1. del d[k]: 删除字典d中键k对应的数据值
+2. k in d: 判断键k是否在字典d中，如果在返回True,否则False
+3. d.keys(): 返回字典d中所有的键信息
+4. d.values():返回字典d中所有的值信息
+5. d.items(): 返回字典d中所有的键值对信息
+6. d.get(key, default=None)
+
+
+例子
+
+```
+d = {'中国':'北京', '美国':'华盛顿', '法国':'巴黎'}
+print('中国' in d)
+print(d.keys())
+print(d.values())
+print(d.get('中国', '东京'))
+print(d.get('日本', '东京'))
+```
 
 
 
@@ -447,3 +690,96 @@ r 或R表示原始字符串
 ord('d')
 ```
 
+### 应用示例
+
+#### 根据数字返回星期几
+
+```
+user_input = eval(input("请输入 1-7 之间的数字："))
+raw_str = '星期一星期二星期三星期四星期五星期六星期日'
+if user_input in [1,2,3,4,5,6,7]:
+    step_date = (user_input - 1) * 3
+    out_put = raw_str[step_date:step_date + 3]
+    print(out_put)
+else:
+    print('请检查输入')
+```
+
+```
+userinput = eval(input('请输入 1-7 之间的数字: '))
+out_temp = '一二三四五六日'
+if userinput in [1,2,3,4,5,6,7]:
+    print('星期' + out_temp[userinput - 1])
+else:
+    print('请检查输入')
+```
+
+#### 输出星座
+
+```
+for i in range(12):
+    print(chr(9801+i), end = "\n")
+```
+
+#### 返回身体质量指数
+
+```
+height, weight = eval(input("请输入身高（米）和体重（公斤）[用逗号隔开]: "))
+bmi = weight/pow(height,2)
+print('BMI指数为：{:.2f}'.format(bmi))
+who, nat = '',''
+if bmi < 18.5:
+    who,nat = '偏瘦', '偏瘦'
+elif  18.5 <= bmi < 24:
+    who, nat = '正常','正常'
+elif 24 <= bmi < 25:
+    who, nat = '正常','偏胖'
+elif 25<= bmi < 28:
+    who, nat = '偏胖', '偏胖'
+elif 28 <= bmi < 30:
+    who, nat = '偏胖','肥胖'
+else:
+    who, nat = '肥胖','肥胖'
+print('国际标准: '+who+'\n'+'国内标准: '+nat)
+```
+
+
+#### 基本统计值
+
+```
+def getNum():
+    nums = []
+    iNumStr = input('请输入数字(按回车结束)：')
+    while iNumStr != '':
+        nums.append(eval(iNumStr))
+        iNumStr = input('请输入数字(按回车结束)：')
+    return nums
+
+def mean(numbers):
+    s = 0.0
+    for num in numbers:
+        s = s + num
+    return s/len(numbers)
+
+def dev(numbers, mean):
+    sdev = 0.0
+    for num in numbers:
+        sdev = sdev + (num - mean)**2
+    return pow(sdev/(len(numbers)-1), 0.5)
+
+def median(numbers):
+    sorted(numbers)
+    size = len(numbers)
+    if size % 2 == 0:
+        med = (numbers[size//2-1]+numbers[size//2+1])/2
+    else:
+        med = (numbers[size//2])
+    return med
+
+def main():
+    n = getNum()
+    m = mean(n)
+    print('平均值:{}, 方差:{}, 中位数:{}.'.format(m, dev(n,m), median(n)))
+
+main()
+```
