--- a/_posts/2018-09-16-Python 常用库介绍.markdown
+++ b/_posts/2018-09-16-Python 常用库介绍.markdown
@@ -6,7 +6,7 @@ date:       2018-09-16
 author:     "YanSir Park"
 header-img: "img/post-bg-js-version.jpg"
 tags:
-    - Python, Python库
+    - Python库
 ---
 
 
